syntax = "proto3";
package rpc;

import "google/protobuf/empty.proto";

option go_package = "/rpc";

service MonitorServer {
  rpc Start(MonitorRequest) returns (stream MonitorResponse){};
  rpc Stop(google.protobuf.Empty) returns (google.protobuf.Empty){};
}

message MonitorRequest {
  string operate = 1; //start stop
}

message MonitorResponse {
  string url = 1;
  string result = 2; //result
}

